# FANUC-ML

./: .gitignore  CONSOLIDATION.md  DIRECTML_CONVERSION.md  PERFORMANCE_SUMMARY.md  README.md  README_DIRECTML.md  README_PERFORMANCE.md  README_PPO_DirectML.md  README_TRAINING.md  analyze_model.py  best_params.json  check_indentation.py  check_workspace.py  check_workspace_bounds.py  demo_directml_model.py  directml.bat  directml_demo.py  directml_show.py  directml_summary.bat  directml_train.py  directml_utils.py  error.txt  error2.txt  error_log.txt  evaluate_directml.bat  evaluate_directml.py  evaluate_directml_model.py  evaluate_model.bat  fanuc.bat  fanuc_env.py  fanuc_platform.py  fix_docstring.txt  fix_indentation.py  fix_train_robot.py  get_home_position.py  home_position.txt  indentation_check.txt  joint_limit_demo.py  legacy.bat  main.py  (+33 more)
archive/deprecated/: ppo_tune_iterative.py
config/: best_params.json  robot_config.py
deprecated/: deploy.py  domain_rand.py  robot_api.py  transfer_learning.py
deprecated/control/: example_usage.py  fanuc_robot_controller.py  instructions.md
fanuc_ml.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
fanuc_robot/: README.md  load_fanuc_robot.py
logs/PPO_FanucReach_20250329-193513/: events.out.tfevents.1743276913.GEM-G14.25792.0
logs/PPO_FanucReach_20250329-193647/: events.out.tfevents.1743277007.GEM-G14.7888.0
logs/PPO_FanucReach_20250329-194100/: events.out.tfevents.1743277260.GEM-G14.21588.0
logs/PPO_FanucReach_20250329-194917/: events.out.tfevents.1743277757.GEM-G14.19244.0
logs/PPO_FanucReach_20250329-194935/: events.out.tfevents.1743277775.GEM-G14.15880.0
logs/PPO_FanucReach_20250329-200529/: events.out.tfevents.1743278729.GEM-G14.2772.0
models/: ppo_fanuc_best.pt  ppo_fanuc_epoch_10.pt  ppo_fanuc_epoch_2.pt  ppo_fanuc_epoch_20.pt  ppo_fanuc_epoch_30.pt  ppo_fanuc_epoch_4.pt  ppo_fanuc_epoch_40.pt  ppo_fanuc_epoch_50.pt  ppo_fanuc_epoch_6.pt  ppo_fanuc_epoch_8.pt  ppo_fanuc_final.pt  ppo_fanuc_quick_final.pt  ppo_fanuc_quick_test.pt
ppo_fanuc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
res/: fanuc_lrmate_200ic.urdf
robots/: README.md
scripts/: analyse_results.py  check_workspace.py  demo.bat  deploy_real.py  eval.bat  evaluate_directml.bat  joint_limit_demo.py  run_pipeline.py  test_install.bat  train.bat
src/: README.md  __init__.py  dml.py  fanuc_env.py  robot_api.py  test.py  train.py  train_robot.py  transfer_learning.py  tune.py
src/core/: __init__.py  (+9 more)
tools/: README.md  run_eval.py  test_install.py
urdf/: fanuc_lrmate_200ic.urdf
(+771 files in other folders)
