[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fanuc-ml"
version = "0.1.0"
description = "Machine Learning Framework for FANUC Robot Arm Positioning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "FANUC ML Team", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/fanuc-ml"
"Bug Tracker" = "https://github.com/yourusername/fanuc-ml/issues"

[project.scripts]
fanuc-train = "main:main"
fanuc-eval = "tools.run_eval:main"  
fanuc-test = "tools.test_install:main"

[tool.setuptools]
packages = ["src", "tools"]
py-modules = ["main"] 